--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!--refrence site http://tpl.zerowp.com/gustos/ -->
   <!--head-->
  <head>
-    <title>foodddd</title>
+    <title>food</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css"> 
