--- a/index.html
+++ b/index.html
@@ -19,7 +19,31 @@
   <!--.body-->
   <div class="body">
     <!--topbar-->
-<div cla
+<div class="topbar">
+  
+    <div class="logo">
+     <img src="images\logo.png" alt="logo">
+    </div>
+    <div class="leftlinks">
+     <a href="">home</a>
+     <a href="">recipes</a>
+     <a href="">blog</a>
+     <a href="">index</a>
+     <a href="">forums</a>
+     <a href="">requests</a>
+     <a href="">pages</a>
+     <a href="">more</a>
+    </div>
+    <div class="rightlinks"> 
+      <div class="rt">
+     <a href=""><i class="fa fa-bell" aria-hidden="true"></i></a>
+     <a href=""><i class="fa fa-envelope" aria-hidden="true"></i></a>
+     <a href=""><i class="fa fa-plus" aria-hidden="true"></i></a>
+     <a href=""><img src="images\auth2.jpg" alt="author" height="24px" width="24px"></a>
+     </div>
+    </div>
+  
+</div>
 
 <div class="section1">
   <div class="meatball">
