--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="leftlinks">
      <a href="">home</a>
-     <a href="">recipes</a>
+     <a href="">reciiiipes</a>
      <a href="">blog</a>
      <a href="">index</a>
      <a href="">forums</a>
