--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <div class="section1">
   <div class="meatball">
-   <img src="images\21.jpg" alt="meatballs">
+   <img src="images\21.jpg" alt="meatball">
   </div>
   <div class="content">
     <div class="headpara">
